--- a/gallery.html
+++ b/gallery.html
@@ -168,7 +168,7 @@
     <div id="modal" class="d-none">
       <div class="img-wrapper position-relative d-flex justify-content-between align-items-center min-vh-100 pt-5">
         <i class="fa-solid fa-caret-left fa-3x text-white ps-5"></i>
-        <img src="images/alexandru-stavrica.jpg" class="w-50" alt="">
+        <img src="images/alexandru-stavrica.jpg" class="" alt="">
         <i class="fa-solid fa-caret-right fa-3x text-white pe-5"></i>
       </div>
     </div>
