--- a/about.html
+++ b/about.html
@@ -197,28 +197,28 @@
           <div class="col-md-6 col-lg-3">
             <div class="inner text-center">
               <i class="fa-regular fa-thumbs-up fa-3x"></i>
-              <h1 id="pageLikes">0</h1>
+              <h1 id="pageLikes"></h1>
               <p class="fs-5">Page Likes</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="inner text-center">
               <i class="fa-solid fa-store fa-3x"></i>
-              <h1 id="locations">0</h1>
+              <h1 id="locations"></h1>
               <p class="fs-5">Locations</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="inner text-center">
               <i class="fa-regular fa-lightbulb fa-3x"></i>
-              <h1 id="greatIdeas">0</h1>
+              <h1 id="greatIdeas"></h1>
               <p class="fs-5">Great Ideas</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="inner text-center">
               <i class="fa-regular fa-comment fa-3x"></i>
-              <h1 id="comments">0</h1>
+              <h1 id="comments"></h1>
               <p class="fs-5">Comments</p>
             </div>
           </div>
